<resources>
    <string name="app_name">ApplicationPlage</string>
    <string name="plus_d_informations">Plus d\'informations ...</string>
    <string name="plage_de_la_palmyre">Plage de la Palmyre</string>
    <string name="en_savoir_plus">En savoir plus ...</string>
    <string name="integer_eu_massa_suscipit_tempus_velit_sed_pellentesque_nisi_vivamus_et_tortor_ac_augue_mollis_accumsan_id_eget_mauris_ut_porttitor_libero_in_semper_fermentum">integer_eu_massa_suscipit_tempus_velit_sed_pellentesque_nisi_vivamus_et_tortor_ac_augue_mollis_accumsan_id_eget_mauris_ut_porttitor_libero_in_semper_fermentum</string>
    <string name="largeur">largeur</string>
    <string name="_0_5km">0,5km</string>
    <string name="longueur">longueur</string>
    <string name="_3_5km">3,5km</string>
    <string name="plages">Plages</string>
    <string name="carte">carte</string>
    <string name="aller_vers_plages">aller vers les plages</string>
    <string name="aller_vers_la_carte_des_plages">aller vers la carte des plages</string>
    <string name="description_de_la_plage">Description de la plage</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nom_de_la_plage">Nom de la plage</string>
    <string name="image_de_la_plage">Image de la plage</string>
    <string name="url_de_la_plage">URl de la plage</string>
    <string name="longueur_de_la_plage">Longueur de la plage</string>
    <string name="largeur_de_la_plage">Largeur de la plage</string>
    <string name="latitude_de_la_plage">Latitude de la plage</string>
    <string name="longitude_de_la_plage">Longitude de la plage</string>
    <string name="create">Create</string>
    <string name="enregistrer">Enregistrer</string>
    <string name="ajout_d_une_plage">Ajout d\'une plage</string>
    <string name="coucou">coucou</string>
</resources>