<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gui.NathanActivity">

    <TextView
        android:id="@+id/TitrePlage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/plage_de_la_palmyre"
        android:textSize="32sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/DescriptionPlage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/integer_eu_massa_suscipit_tempus_velit_sed_pellentesque_nisi_vivamus_et_tortor_ac_augue_mollis_accumsan_id_eget_mauris_ut_porttitor_libero_in_semper_fermentum"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TitrePlage"
        android:textAlignment="center"/>


    <TextView
        android:id="@+id/lienPlage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/en_savoir_plus"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/DescriptionPlage"
        android:textColor="@color/blue"
        android:paddingTop="12dp"/>

    <LinearLayout
        android:id="@+id/details_size_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintTop_toBottomOf="@id/lienPlage">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/largeur"
                android:textAlignment="center"
                android:textSize="16sp"
                android:padding="16dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_0_5km"
                android:textAlignment="center"
                android:textSize="16sp"
                android:padding="16dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/longueur"
                android:textAlignment="center"
                android:textSize="16sp"
                android:padding="16dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_3_5km"
                android:textAlignment="center"
                android:textSize="16sp"
                android:padding="16dp"
                />
        </LinearLayout>
    </LinearLayout>
    <ImageView
        android:id="@+id/imagePlage"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintTop_toBottomOf="@id/details_size_ll"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:src="@drawable/plage_de_la_palmyre"
        android:scaleType="centerCrop"
        />

</androidx.constraintlayout.widget.ConstraintLayout>